--- a/app/src/main/res/layout/activity_transport_profile.xml
+++ b/app/src/main/res/layout/activity_transport_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_body"
     android:orientation="vertical"
-    tools:context=".transport.TransportProfileActivity">
+    tools:context=".ui.transport.TransportProfileActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
@@ -15,7 +15,6 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/background_toolbar"
         android:elevation="8dp"
-        app:menu="@menu/toolbar_menu_profile"
         app:navigationIcon="@drawable/ic_btn_back"
         app:subtitleTextAppearance="@style/ToolbarSubtitleTextAppearance"
         app:subtitleTextColor="#FFFFFF"
@@ -28,91 +27,243 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:background="#FFFFFF"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.google.android.material.card.MaterialCardView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardElevation="8dp"
-                android:layout_margin="16dp">
+                android:layout_height="225dp">
+
+                <ImageView
+                    android:id="@+id/companyBanner"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:background="#99121212"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:foreground="?android:attr/selectableItemBackground" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/companyPhoto"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:src="@drawable/placeholder_header_user_dp" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="16dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/companyName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/lato_bold"
+                    android:maxLines="1"
+                    android:text="company_name"
+                    android:textAlignment="center"
+                    android:textColor="@color/textColor"
+                    android:textSize="16sp" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp" />
+
+                <TextView
+                    android:id="@+id/companyDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/lato"
+                    android:text="description"
+                    android:textAlignment="center"
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp" />
+
+                <TextView
+                    android:id="@+id/companyAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato"
+                    android:text="address"
+                    android:textAlignment="center"
+                    android:textColor="@color/textColor"
+                    android:textSize="14sp" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:orientation="vertical">
 
-                    <RelativeLayout
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/lato_bold"
+                        android:maxLines="1"
+                        android:text="Contact Us:"
+                        android:textAlignment="center"
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp" />
+
+                    <Space
                         android:layout_width="match_parent"
-                        android:layout_height="150dp">
-
-                        <ImageView
-                            android:id="@+id/profileBanner"
-                            android:layout_width="match_parent"
-                            android:layout_height="100dp"
-                            android:background="#99121212"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:foreground="?android:attr/selectableItemBackground" />
-
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/profilePhoto"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:layout_alignParentBottom="true"
-                            android:layout_centerHorizontal="true"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:foreground="?android:attr/selectableItemBackground"
-                            android:src="@drawable/placeholder_header_user_dp" />
-
-                    </RelativeLayout>
+                        android:layout_height="8dp"/>
 
                     <LinearLayout
+                        android:id="@+id/telephone_number"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="16dp"
-                        android:orientation="vertical">
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
 
                         <TextView
-                            android:id="@+id/profileName"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:ellipsize="end"
-                            android:fontFamily="@font/lato_bold"
-                            android:maxLines="1"
-                            android:text="user_display_name"
-                            android:textAlignment="center"
-                            android:textColor="@color/textColor"
-                            android:textSize="16sp" />
-
-                        <TextView
-                            android:id="@+id/profileEmail"
-                            android:layout_width="match_parent"
+                            android:layout_width="110dp"
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
                             android:fontFamily="@font/lato"
                             android:maxLines="1"
-                            android:text="user_email"
-                            android:textAlignment="center"
+                            android:text="Telephone No.:"
+                            android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
+                        <Space
+                            android:layout_width="8dp"
+                            android:layout_height="match_parent"/>
+
                         <TextView
-                            android:id="@+id/profileContactNumber"
+                            android:id="@+id/companyTelephoneNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:maxLines="1"
-                            android:text="user_contact_number"
-                            android:textAlignment="center"
+                            android:text="telephone_number"
+                            android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
                     </LinearLayout>
-                </LinearLayout>
 
-            </com.google.android.material.card.MaterialCardView>
+                    <LinearLayout
+                        android:id="@+id/cellphone_number"
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/lato"
+                            android:maxLines="1"
+                            android:text="Cellphone No.:"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
+
+                        <Space
+                            android:layout_width="8dp"
+                            android:layout_height="match_parent"/>
+
+                        <TextView
+                            android:id="@+id/companyCellphoneNumber"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/lato"
+                            android:text="cellphone_number"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/lato"
+                            android:maxLines="1"
+                            android:text="Email:"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
+
+                        <Space
+                            android:layout_width="8dp"
+                            android:layout_height="match_parent"/>
+
+                        <TextView
+                            android:id="@+id/companyEmail"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/lato"
+                            android:text="email"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/website"
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/lato"
+                            android:maxLines="1"
+                            android:text="Website:"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
+
+                        <Space
+                            android:layout_width="8dp"
+                            android:layout_height="match_parent"/>
+
+                        <TextView
+                            android:id="@+id/companyWebsite"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/lato"
+                            android:text="website"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/textColor"
+                            android:textSize="14sp" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
