--- a/app/src/main/res/layout/booking_confirmed_item_layout.xml
+++ b/app/src/main/res/layout/booking_confirmed_item_layout.xml
@@ -3,15 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp">
+    android:layout_marginBottom="8dp">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/bookingCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardElevation="8dp">
+        android:layout_margin="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
