--- a/app/src/main/res/layout/fragment_bookings_confirmed.xml
+++ b/app/src/main/res/layout/fragment_bookings_confirmed.xml
@@ -18,7 +18,7 @@
             android:layout_centerInParent="true"
             android:drawableTop="@drawable/ic_icon_status_none"
             android:fontFamily="@font/lato"
-            android:text="No bookings found."
+            android:text="No confirmed bookings found."
             android:textColor="@color/textColor"
             android:textSize="16sp"
             android:visibility="visible" />
@@ -27,9 +27,6 @@
             android:id="@+id/bookingList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingStart="10dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="10dp"
             android:visibility="gone" />
     </RelativeLayout>
 
