--- a/app/src/main/res/layout/fragment_rentals_listing.xml
+++ b/app/src/main/res/layout/fragment_rentals_listing.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.admin.rentals.RentalsListingFragment">
 
+    <TextView
+        android:id="@+id/rentalsStatusNone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:drawableTop="@drawable/ic_icon_status_none"
+        android:fontFamily="@font/lato"
+        android:text="No van available for rent (yet)."
+        android:textColor="@color/textColor"
+        android:textSize="16sp"
+        android:visibility="visible" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rentalsList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
-</LinearLayout>
+</RelativeLayout>
