--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,25 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/headerUser"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/background_toolbar"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:paddingLeft="16dp"
+    android:paddingTop="50dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="16dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/headerUserPhoto"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:contentDescription="@string/nav_header_desc"
         android:src="@drawable/placeholder_header_user_dp" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="8dp"/>
 
     <TextView
         android:id="@+id/headerUserName"
@@ -29,7 +28,6 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato_bold"
         android:textColor="#FFFFFF"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
         android:textSize="16sp" />
 
