--- a/app/src/main/res/layout/nav_header_transport_main.xml
+++ b/app/src/main/res/layout/nav_header_transport_main.xml
@@ -5,65 +5,48 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/background_toolbar"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingLeft="16dp"
     android:paddingTop="50dp"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:paddingRight="16dp"
+    android:paddingBottom="16dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/companyPhoto"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:contentDescription="@string/nav_header_desc"
         android:src="@drawable/placeholder_header_user_dp" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="8dp"/>
 
     <TextView
         android:id="@+id/companyName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato_bold"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="company_name"
         android:textColor="#FFFFFF"
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/companyEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/lato"
-        android:text="company_email"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/companyContactNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/lato"
-        android:text="company_contact_number"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp" />
-
-    <TextView
         android:id="@+id/companyAddress"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato"
-        android:text="company_address"
+        android:text="address"
         android:textColor="#FFFFFF"
         android:textSize="14sp" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="8dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:background="@drawable/background_qr"
         android:orientation="horizontal"
         android:padding="8dp">
@@ -101,6 +84,7 @@
                 android:text="user_email"
                 android:textColor="@color/textColor"
                 android:textSize="14sp" />
+
             <TextView
                 android:id="@+id/headerUserAccountType"
                 android:layout_width="wrap_content"
