--- a/app/src/main/res/menu/bottom_nav_menu_transport_admin.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_transport_admin.xml
@@ -5,6 +5,10 @@
         android:id="@+id/nav_bookings"
         android:icon="@drawable/ic_menu_book"
         android:title="@string/title_book_admin" />
+    <item
+        android:id="@+id/nav_scan"
+        android:icon="@drawable/ic_menu_book"
+        android:title="Scan QR" />
 
     <item
         android:id="@+id/nav_schedule"
