--- a/app/src/main/res/layout/activity_chat_admin.xml
+++ b/app/src/main/res/layout/activity_chat_admin.xml
@@ -56,8 +56,11 @@
         android:background="#FFFFFF"
         android:elevation="8dp"
         android:gravity="center"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:orientation="horizontal"
-        android:padding="16dp">
+        android:paddingStart="16dp"
+        android:paddingEnd="16sp">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputChat"
